# cep18

./: Cargo.toml  Makefile
.github/workflows/: ci-casper-rust-contract.yml  nightly-scheduled-test.yml  publish-js-client.yml
cep18/: Cargo.toml  rust-toolchain
cep18-test-contract/: Cargo.toml
cep18-test-contract/src/: main.rs
cep18/src/: allowances.rs  balances.rs  constants.rs  entry_points.rs  error.rs  events.rs  main.rs  modalities.rs  utils.rs
client-js/: package-lock.json  package.json  tsconfig.json
client-js/examples/: install.ts  usage.ts  usage2.ts
client-js/src/: EventEnabledContract.ts  TypedContract.ts
contract/: Cargo.toml
contract/src/: main.rs  utils.rs
contracts/: Cargo.toml  rust-toolchain
contracts/contract/: Cargo.toml
contracts/contract/src/: allowances.rs  balances.rs  constants.rs  entry_points.rs  error.rs  events.rs  main.rs  modalities.rs  security.rs  utils.rs
contracts/test/: Cargo.toml
contracts/test-contract/: Cargo.toml
contracts/test-contract/src/: main.rs
contracts/test/src/: constants.rs  main.rs
docs/: 4-tests.md  TUTORIAL.md
example/erc20-token-sale/: Cargo.toml
example/erc20-token-sale-counters/: Cargo.toml
example/erc20-token-sale-counters/src/: main.rs
example/erc20-token-sale-invest/: Cargo.toml
example/erc20-token-sale-invest/src/: main.rs
example/erc20-token-sale-update/: Cargo.toml
example/erc20-token-sale/src/: constants.rs  lib.rs  main.rs
example/erc20-token-sale/src/mods/: constants.rs  mod.rs  utils.rs
testing/erc20-token-sale-tests/: Cargo.toml  wasm
testing/erc20-token-sale-tests/src/: integration_tests.rs
testing/tests/wasm/: erc20_token_sale.wasm
tests/: Cargo.toml
tests/fixtures/cep18-1.5.6-minted/: state.json
tests/fixtures/cep18-1.5.6-minted/global_state/: data.lmdb  data.lmdb-lock
tests/src/: allocate.rs  allowance.rs  events.rs  filter.rs  fixture_gen.rs  install.rs  lib.rs  migration.rs  mint_and_burn.rs  transfer.rs  upgrade.rs
tests/src/utility/: constants.rs  installer_request_builders.rs  message_handlers.rs  mod.rs  support.rs
