[workspace]
members = ["contracts/contract", "contracts/test-contract", "tests"]
default-members = ["contracts/contract", "tests"]
resolver = "2"

[workspace.package]
name = "cep18"
version = "2.0.0"
edition = "2021"
description = "A library for developing CEP-18 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-cep18"
homepage = "https://github.com/casper-ecosystem"
repository = "https://github.com/casper-ecosystem/cep18"
license-file = "LICENSE"

[workspace.dependencies]
casper-types = { version = "5.0.0", git = "https://github.com/casper-network/casper-node.git" }
casper-contract = { version = "4.0.0", git = "https://github.com/casper-network/casper-node.git" }


[profile.release]
codegen-units = 1
lto = true
