[package]
name = "cep18-test-contract"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "cep18_test_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc2"}
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc2"}
