[package]
name = "cep18"
version = "2.0.0"
edition = "2021"
description = "A library for developing CEP-18 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-cep18"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/cep18"
license-file = "../LICENSE"

[[bin]]
name = "cep18"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
base64 = { version = "0.20.0", default-features = false, features = ["alloc"] }
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0"}
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0"}
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.16.0", default-features = false }
casper-event-standard = { git = "https://github.com/deuszex/casper-event-standard", branch = "feat-2.0", default-features = false }
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
serde-json-wasm = { version = "1.0.1", default-features = false }