[package]
name = "cep18"
version = "1.2.0"
edition = "2018"
description = "A library for developing CEP-18 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-cep18"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/cep18"
license-file = "../LICENSE"

[[bin]]
name = "cep18"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
casper-contract = "4.0.0"
casper-types = "4.0.2"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.20.2", default-features = false }
casper-event-standard = { version = "0.5.0", default-features = false }
