[workspace]
members = ["contract", "test"]
resolver = "2"

[workspace.package]
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
homepage = "https://github.com/casper-ecosystem"
repository = "https://github.com/casper-ecosystem"

[workspace.dependencies]
casper-types = "4.0.2"

[profile.release]
codegen-units = 1
lto = true
