[package]
name = "tests"
version.workspace = true
edition.workspace = true

[lib]
name = "tests"
bench = false
doctest = false

[[bin]]
name = "fixture_gen"
path = "src/fixture_gen.rs"
bench = false
doctest = false

[dependencies]
casper-types.workspace = true
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node.git", default-features = false }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", default-features = false }
casper-storage = { git = "https://github.com/casper-network/casper-node.git", default-features = false }
casper-fixtures = { git = "https://github.com/deuszex/casper-fixtures", branch = "feat-2.0" }
once_cell = "1.20"
