[package]
name = "cowl-cep18"
version = "1.2.0"
description = "COWL Token Implementation (CEP-18 with Vesting)"
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "cowl_cep18"
path = "src/main.rs"
bench = false
doctest = false
test = false

[lib]
path = "src/lib.rs"

[dependencies]
casper-contract = { version = "4.0.0", optional = true }
casper-types.workspace = true
hex = { version = "0.4.3", default-features = false }
casper-event-standard = { version = "0.5.0", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }

[features]
default = ["contract-support"]
contract-support = ["dep:casper-contract"]
