[package]
name = "cep18-test-contract"
version = "1.2.0"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "cep18_test_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
cowl-cep18 = { path = "../contract", default-features = false }
casper-contract = { version = "4.0.0", optional = true, default-features = false }
casper-types.workspace = true

[features]
default = ["cowl-cep18/contract-support", "casper-contract/no-std-helpers"]
