[package]
name = "erc20-token-sale-invest"
authors = ["Gregory Roussac <gregory@casperlabs.io>"]
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
erc20-token-sale = { path = "../erc20-token-sale" }

[[bin]]
name = "erc20_token_sale_invest"
path = "src/main.rs"
bench = false
doctest = false
test = false
