[package]
name = "erc20-token-sale-update"
authors = ["Gregory Roussac <gregory@casperlabs.io>"]
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-erc20 = { path = "../../erc20" }
erc20-token-sale = { path = "../erc20-token-sale" }
casper-types = "1.3.2"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "erc20_token_sale_update"
path = "src/main.rs"
bench = false
doctest = false
test = false
