[package]
name = "erc20-token-sale"
authors = ["Gregory Roussac <gregory@casperlabs.io>"]
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-erc20 = { path = "../../erc20" }
casper-types = "1.5"
# base64 = { version = "0.20.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "erc20_token_sale"
path = "src/main.rs"
bench = false
doctest = false
test = false
