[package]
name = "erc20-token-sale-tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-contract = "1.4.4"
casper-engine-test-support = "2.2.0"
casper-execution-engine = "2.0.0"
casper-types = "1.5.0"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false
