[package]
name = "erc20-token-sale-tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = [
  "test-support",
] }
casper-engine-test-support = { version = "2.2.0", features = ["test-support"] }
casper-execution-engine = "2.0.1"
casper-erc20 = { path = "../../erc20" }
erc20-token-sale = { path = "../../example/erc20-token-sale" }
casper-types = "1.5.0"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]
